--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ title: Home
 <div class="docs-section">
   <h4>About</h4>
   <p>
-    Hello, I'm a M.S student in Language & Knowlege Lab at KAIST Kim Jaechul Graduate School of AI. I am grateful to be advised by Minjoon Seo. Prior to my Master's studies, I earned a B.S. in Computer Science at KAIST with a minor in Electrical Engineering in 2024.
+    Hello, I'm a M.S. student in Language & Knowlege Lab at KAIST Kim Jaechul Graduate School of AI. I am grateful to be advised by Minjoon Seo. Before my Master's, I earned a B.S. in Computer Science at KAIST with a minor in Electrical Engineering in 2024.
   </p>
   
   <p>
-    I am passionate about both the analysis and application of language models within the field of Natural Language Processing (NLP). My research focuses on exploring how language models acquire and utilize knowledge during their training, specifically through the areas of Knowledge Acquisition of LM and Mechanistic Interpretability. I aim to build reliable language models based on a deeper, more robust understanding of their internal process. Additionally, I have an interest in advancing high-performing large language models (LLMs) in areas such as Multilingual and Reasoning, as well as exploring research in State Space Models (SSM).
+    I am passionate about analyzing and applying language models within the field of Natural Language Processing (NLP). My research focuses on exploring how language models acquire and utilize knowledge during their training, specifically through the areas of Knowledge Acquisition of LM and Mechanistic Interpretability. I aim to build reliable language models based on a deeper, more robust understanding of their internal process. Additionally, I have an interest in advancing high-performing large language models (LLMs) in areas such as Multilingual and Reasoning, as well as exploring research in State Space Models (SSM).
   </p>
 
   <p>
@@ -275,7 +275,7 @@ title: Home
 <div class="docs-section">
   <h4>Vitæ</h4>
   <ul class="timeline">
-    <!-- {% for exp in site.data.experience.experiences %}
+    {% for exp in site.data.experience.experiences %}
     <li>
       {% if exp.category == "work" %}
       <div class="direction-l">
@@ -289,7 +289,7 @@ title: Home
         <div class="desc"><b>{{ exp.title }}</b> <br/> {{ exp.subtitle }}</div>
       </div>
     </li>
-    {% endfor %} -->
+    {% endfor %}
   </ul>
 </div>
 
