Fix: Change font

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 <div class="docs-section">
   <h4>About</h4>
   <p>
-    Hello, I'm a M.S. student in Language & Knowlege Lab at KAIST Kim Jaechul Graduate School of AI. I am grateful to be advised by Minjoon Seo. Before my Master's, I earned a B.S. in Computer Science at KAIST with a minor in Electrical Engineering in 2024.
+    Hello👋🏻, I'm a M.S. student in Language & Knowlege Lab at KAIST Kim Jaechul Graduate School of AI. I am grateful to be advised by Minjoon Seo. Before my Master's, I earned a B.S. in Computer Science at KAIST with a minor in Electrical Engineering in 2024.
   </p>
   
   <p>
@@ -207,7 +207,7 @@ title: Home
 
   <div class="tab-content">
     <div class="tab-pane active" id="projects-selected">
-      <!-- {% assign selected_projects = site.data.projects.projects | where: "selected", "y" %}
+      {% assign selected_projects = site.data.projects.projects | where: "selected", "y" %}
       {% for project in selected_projects %}
         {% assign index_modulo = forloop.index0 | modulo:3 %}
         {% if index_modulo == 0 %}
@@ -234,7 +234,7 @@ title: Home
         {% if index_modulo == 2 %}
           </div>
         {% endif %}
-    {% endfor %} -->
+    {% endfor %}
     </div>
 
     <div class="tab-pane" id="projects-all">
